@@ -385,12 +385,12 @@ BOOL CUtils::StartTextViewer(CString file)
 	return TRUE;
 }
 
-void CUtils::Unescape(LPTSTR psz)
+void CUtils::Unescape(char * psz)
 {
-	LPTSTR pszSource = psz;
-	LPTSTR pszDest = psz;
+	char * pszSource = psz;
+	char * pszDest = psz;
 
-	static const TCHAR szHex[] = _T("0123456789ABCDEF");
+	static const char szHex[] = "0123456789ABCDEF";
 
 	// Unescape special characters. The number of characters
 	// in the *pszDest is assumed to be <= the number of characters
@@ -408,28 +408,28 @@ void CUtils::Unescape(LPTSTR psz)
 				break;
 			}
 
-			TCHAR nValue = '?';
-			LPCTSTR pszLow = NULL;
-			LPCTSTR pszHigh = NULL;
+			char nValue = '?';
+			char * pszLow = NULL;
+			char * pszHigh = NULL;
 			pszSource++;
 
-			*pszSource = (TCHAR) _totupper(*pszSource);
-			pszHigh = _tcschr(szHex, *pszSource);
+			*pszSource = (char) toupper(*pszSource);
+			pszHigh = strchr(szHex, *pszSource);
 
 			if (pszHigh != NULL)
 			{
 				pszSource++;
-				*pszSource = (TCHAR) _totupper(*pszSource);
-				pszLow = _tcschr(szHex, *pszSource);
+				*pszSource = (char) toupper(*pszSource);
+				pszLow = strchr(szHex, *pszSource);
 
 				if (pszLow != NULL)
 				{
-					nValue = (TCHAR) (((pszHigh - szHex) << 4) +
+					nValue = (char) (((pszHigh - szHex) << 4) +
 									(pszLow - szHex));
 				}
-			}
+			} // if (pszHigh != NULL) 
 			*pszDest++ = nValue;
-		}
+		} 
 		else
 			*pszDest++ = *pszSource;
 			
