@@ -88,7 +88,8 @@ protected:
 	virtual void InitWorkfileView();
 	void Time64ToTimeString(__time64_t time, TCHAR * buf);
 
-	static void Unescape(LPTSTR psz);
+	//static void Unescape(LPTSTR psz);
+	static void Unescape(char * psz);
 
 	struct listproperty
 	{
