@@ -1,4 +1,7 @@
-
+- BUG: The property page and the repo browser showed
+       some garbage characters instead of clean
+       Unicode chars. (Stefan)
+       
 Version 0.22
 - ADD: A lot of improved icons. (Luebbe)
 - ADD: Hint text for the setting "don't remove
